# webring-manager

./: .gitignore  Cargo.toml  sitelist
.github/workflows/: aws.yml  deploy.yml  update_sitelist.yml
webring/: Cargo.toml
webring/src/: lib.rs
webring_manager_next/: Cargo.toml
webring_manager_next/src/: main.rs
webring_manager_prev/: Cargo.toml
webring_manager_prev/src/: main.rs
