[package]
name = "webring_manager_next"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
async-io = { version = "2.6.0", features = ["tracing"] }
async-compat = "0.2.5"
lambda_http = "0.17.0"
webring = { path = "../webring/" }
